--- a/default.css
+++ b/default.css
@@ -41,6 +41,19 @@ body{
     color:#000000 !important;
 }
 
+.navbar-right {
+    position: absolute !important;
+    right: 0 !important;
+}
+
+.free-quote {
+    padding: 9px 5px 9px 0 !important;
+}
+
+.free-quote > .btn-xs {
+    margin-top: 4px !important;
+}
+
 .img{
 	width:100% !important;
 }
