--- a/default.css
+++ b/default.css
@@ -35,6 +35,325 @@ body{
 .navbar-inverse .navbar-nav>.active>a {
 	background-color: transparent !important;
 	color: #0c271e !important;
+}body{
+	font-family: 'Quicksand', sans-serif !important;
+}
+
+.row{
+	margin-right:0 !important;
+	margin-left:0 !important;
+}
+
+.container{
+	background-color:#c1d8dd;
+	padding:10%;
+}
+
+.container-fluid{
+	padding-left:0 !important;
+	padding-right:0 !important;
+}
+
+.navbar {
+	margin-bottom:0px !important;
+	width:100% !important;
+	padding: 0 5%;
+	color:#FFFFFF;
+	background:transparent !important;
+	background-image:none !important;
+	border-color:transparent !important;
+	box-shadow:none !important;
+	font-weight: bold;
+}
+.navbar ul a{
+	color:#008fb3 !important;
+}
+
+.navbar-inverse .navbar-nav>.active>a {
+	background-color: transparent !important;
+	color: #0c271e !important;
+}
+
+.navbar-inverse .navbar-brand {
+    color:#000000 !important;
+}
+
+#quote{
+	color:red !important;
+	float: right;
+    height: 50px;
+    padding: 12px 12px;
+    font-size: 18px;
+}
+
+.img{
+	width:100% !important;
+}
+
+
+.space{
+	width:100%;
+	background-color:#c1d8dd;
+	padding:15%;
+}
+
+.about{
+	background-color:#c1d8dd;
+	padding:10% !important;
+
+	/* need to add more style */
+}
+
+.about p{
+	font-size:16px;
+}
+
+.services{
+	padding:10% !important;
+	margin: auto 0;
+}
+
+.services img{
+	width:25%;
+}
+
+/* Portfolio*/
+.portfolio{
+	padding:5% !important;
+	margin: auto 0;
+}
+
+.portfolio img{
+	width:100%;
+}
+
+.portfolio_container {
+  position: relative;
+  width: 50%;
+  padding:2%;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: #008CBA;
+}
+
+
+.portfolio_container:hover .overlay {
+  opacity: 0.3;
+}
+
+.icon {
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1.0;
+}
+
+.fa:hover {
+  color: #eee;
+}
+
+/* Portfolio End*/
+
+
+/*Portfolio Modal*/
+
+.modal-container{
+	background-color:white;
+	padding:10%;
+	text-align:center;
+}
+
+.modal-container a:hover, a:visited, a:link, a:active{
+	text-decoration:none;
+	color:black !important;
+}
+
+
+.portfolio-modal .modal-content {
+  border-radius: 0;
+  background-clip: border-box;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: none;
+  min-height: 100%;
+  padding: 100px 0;
+  text-align: center;
+}
+
+.portfolio-modal .modal-content h2 {
+  margin: 0;
+  font-size: 3em
+}
+
+.portfolio-modal .modal-content img {
+  margin-bottom: 30px
+}
+
+.portfolio-modal .modal-content .item-details {
+  margin: 30px 0
+}
+
+.portfolio-modal .close-modal {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  background-color: transparent;
+  top: 25px;
+  right: 25px;
+  cursor: pointer
+}
+
+.portfolio-modal .close-modal:hover {
+  opacity: .3
+}
+
+.portfolio-modal .close-modal .lr {
+  height: 75px;
+  width: 1px;
+  margin-left: 35px;
+  background-color: #2C3E50;
+  transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  z-index: 1051
+}
+
+.portfolio-modal .close-modal .lr .rl {
+  height: 75px;
+  width: 1px;
+  background-color: #2C3E50;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  z-index: 1052
+}
+
+.portfolio-modal .modal-backdrop {
+  opacity: 0;
+  display: none;
+}
+/*Portfolio Modal End*/
+
+.color{
+	width: 100% !important;
+	padding: 6% !important;
+}
+
+.row-fluid{
+	background-color:green;
+}
+.contact p{
+	color:white;
+}
+
+.contact{
+	margin: 0 auto;
+	padding-top: 6%;
+}
+
+.contact li{
+	list-style:none;
+	white-space: pre;
+	font-size: 20px;
+}
+
+.contact a:hover, a:visited, a:link, a:active{
+	color:white;
+	text-decoration:none;
+}
+
+.contact a:hover{
+	color:#0c271e;
+	text-decoration:none;
+}
+
+.email{
+	padding: 10% 35% !important;
+}
+
+.email p{
+	font-size:10px;
+}
+
+.socialMedia{
+	background-color: #4cb6ce;
+	padding:4% !important;
+}
+
+.btn-social {
+    display: inline-block;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    font-size: 20px;
+    line-height: 45px;
+}
+
+.btn-outline {
+    color: #fff;
+    font-size: 20px;
+    border: 2px solid #fff;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+}
+
+.btn-social {
+    width: 50px;
+    height: 50px;
+}
+
+.footer{
+	background-color:#3ba5be;
+	padding: .6% 100%;
+	color: white;
+}
+
+.Ryan{
+	margin: .3% 0 0 0 !important;
+}
+
+.Ryan a{
+	color:#d8f3ea;
+}
+
+.Ryan active{
+	color:#0c271e;
+}
+
+.Business{
+	margin: .3% 0 0 0 !important;
+}
+
+.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+    background-color:transparent !important;
+}
+
+.navbar-inverse .navbar-toggle {
+	border-color:transparent !important;
+}
+
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #2c8768 !important;
 }
 
 .navbar-inverse .navbar-brand {
