--- a/default.css
+++ b/default.css
@@ -294,7 +294,51 @@ h4 {
 
 /* Service End */
 
-/*Portfolio Modal*/
+/* Coupon Modal */
+
+#coupon-modal-content {
+  display: none;
+}
+
+#coupon-modal-content label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#coupon-modal-content input {
+  width: 95%;
+}
+
+.close{
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.modal{
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color:rgba(0,0,0,0.4);
+}
+
+.coupon-modal-content{
+	background-color: #fefefe;
+	margin: 5% auto;
+	padding: 5%;
+	border: 1px solid #888;
+	width: 80%;
+}
+/* Coupon Modal End */
+
+/* Portfolio Modal */
 
 .modal-container{
 	background-color:white;
